@@ -2,6 +2,7 @@ v1.3.13 (2019.02.xx)
   - Add logging of detected stream properties (real-time, seekable, etc) when opening streams
   - Add mechanism to detect and report dropped streams if data transfer rate falls to zero
   - Fix bug that caused a dropped stream to be waited on infinitely for more data to become available
+  - Log an error message when unexpected zero length reads occur on in-progress streams
 
 v1.3.12 (2019.02.02)
   - Fix bug introduced in v1.3.11 that prevented EPG listings for channels with subchannels (x.x) from loading
